# AI-innovation-monitoring

./: .env.template  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
config/: app.local.json  company_registry.json  impact_graph.json  market_profile.json  sources.json
docs/: architecture.md  runbook.md
src/ai_innovation_monitoring/: __main__.py  analysis.py  api.py  cli.py  config.py  decision.py  domain.py  fetching.py  impact.py  orchestrator.py  order_delivery.py  queueing.py  sources.py  storage.py  telemetry.py
src/ai_innovation_monitoring/ui/: dashboard.html
systemd/: ai-monitor.service
tests/: test_analysis.py  test_decision.py  test_impact.py  test_pipeline.py  test_queueing.py  test_sources.py  test_storage.py
